2009-12-01 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/io-provider-desktop/nadp-desktop-file.c
	(check_key_file): Fix check of required keys.

	* nautilus-actions/io-provider-desktop/nadp-desktop-file.c
	(nadp_desktop_file_set_label, nadp_desktop_file_set_tooltip):
	Fix locale.

	* nautilus-actions/io-provider-desktop/nadp-desktop-provider.c:
	* nautilus-actions/io-provider-desktop/nadp-desktop-provider.h:
	Fix NadpDesktopProviderPrivate typedef definition.

	* nautilus-actions/io-provider-desktop/nadp-utils.h:
	Remove egg-desktop-file.h include.

	* nautilus-actions/io-provider-desktop/nadp-write.c
	(nadp_iio_provider_is_willing_to_write): Fix permissions.
	(nadp_iio_provider_write_item): Create directory if it doesn't exist.

	* nautilus-actions/private/na-object-item-priv.h: Fix typo.

	* nautilus-actions/io-provider-desktop/nadp-desktop-provider.h:
	* nautilus-actions/io-provider-desktop/nadp-desktop-provider.c:
	Move NadpDesktopProviderPrivate to C source.

	* nautilus-actions/io-provider-desktop/nadp-write.c:
	Remove EggDesktopFile class.
	(nadp_iio_provider_write_item, nadp_iio_provider_delete_item):
	Check that item is not read-only before trying to write or delete.

	* nautilus-actions/io-provider-desktop/Makefile.am:
	Remove EggDesktopFile files.

	* nautilus-actions/io-provider-desktop/nadp-desktop-file.c:
	* nautilus-actions/io-provider-desktop/nadp-desktop-file.h:
	Handle key files.

	* nautilus-actions/io-provider-desktop/nadp-read.c:
	Test for writability status of the readen item.

2009-11-30 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/io-provider-desktop/nadp-desktop-file.c:
	* utilus-actions/io-provider-desktop/nadp-desktop-file.h:
	* nautilus-actions/io-provider-desktop/nadp-read.c:
	* nautilus-actions/io-provider-desktop/nadp-read.h:
	* nautilus-actions/io-provider-desktop/nadp-utils.c:
	* nautilus-actions/io-provider-desktop/nadp-utils.h:
	* nautilus-actions/io-provider-desktop/nadp-write.c: