@@ -97,3 +97,7 @@
   this implies dnd of an action inside of the menu would be forbidden
 
 - nact: if item is read-only, all fields should be disabled
+
+- nact: creation assistant
+
+- toolbar label: if not set, initialize to item label
